[#97] Groups returned with users over REST
The groups are stored as an array of IDs in the session. The client will
have to fetch the list of groups from the server with another query to
match the ids with group names.
